--- a/package.json
+++ b/package.json
@@ -10,41 +10,42 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "@reduxjs/toolkit": "^1.5.0",
+    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.8.10",
+    "@react-navigation/stack": "5.12.8",
+    "@reduxjs/toolkit": "1.5.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-localization": "^2.1.6",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.16.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "react-native-gesture-handler": "1.9.0",
+    "react-native-localization": "2.1.6",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "2.16.1",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
-    "@types/react-redux": "^7.1.14",
-    "@types/react-test-renderer": "^16.9.2",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "@babel/core": "7.8.4",
+    "@babel/runtime": "7.8.4",
+    "@react-native-community/eslint-config": "1.1.0",
+    "@types/jest": "25.2.3",
+    "@types/react-native": "0.63.2",
+    "@types/react-redux": "7.1.14",
+    "@types/react-test-renderer": "16.9.2",
+    "@types/redux": "3.6.0",
+    "@types/redux-thunk": "2.1.0",
+    "@typescript-eslint/eslint-plugin": "2.27.0",
+    "@typescript-eslint/parser": "2.27.0",
+    "babel-jest": "25.1.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "6.5.1",
+    "jest": "25.1.0",
+    "metro-react-native-babel-preset": "0.59.0",
     "react-test-renderer": "16.13.1",
-    "typescript": "^3.8.3"
+    "typescript": "3.8.3"
   },
   "jest": {
     "preset": "react-native",
