--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android --variant=devDebug --appIdSuffix=dev",
-    "android-prod": "react-native run-android --variant=prodRelease",
-    "android-qa": "react-native run-android --variant=qaDebug --appIdSuffix=qa",
-    "ios": "react-native run-ios",
+    "android:prod": "react-native run-android --variant=prodRelease",
+    "android:qa": "react-native run-android --variant=qaDebug --appIdSuffix=qa",
+    "ios": "react-native run-ios --scheme 'Dev' --configuration Dev.Debug",
+    "ios:qa": "react-native run-ios --scheme 'Qa' --configuration Qa.Release",
+    "ios:prod": "react-native run-ios --scheme 'butterfly' --configuration Release",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
