--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@react-navigation/native": "5.8.10",
     "@react-navigation/stack": "5.12.8",
     "@reduxjs/toolkit": "1.5.0",
+    "axios": "0.21.1",
+    "lodash": "4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-config": "1.4.1",
     "react-native-gesture-handler": "1.9.0",
     "react-native-localization": "2.1.6",
     "react-native-reanimated": "1.13.2",
@@ -38,6 +41,7 @@
     "@types/jest": "25.2.3",
     "@types/react-native": "0.63.2",
     "@types/react-redux": "7.1.14",
+    "@types/lodash": "4.14.167",
     "@types/react-test-renderer": "16.9.2",
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
